--- a/src/main/resources/versicherung/Views/Dashboard.fxml
+++ b/src/main/resources/versicherung/Views/Dashboard.fxml
@@ -228,13 +228,53 @@
                      <children>
                         <StackPane fx:id="sceneKunden_stackpane" prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <HBox fx:id="sceneKunden_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0">
+                              <HBox fx:id="sceneKunden_buttons" alignment="CENTER" prefHeight="100.0" prefWidth="220.0" spacing="20.0" visible="false">
                                  <children>
                                     <Button fx:id="sceneKunden_button_auflisten" mnemonicParsing="false" onAction="#handleSceneKundenButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Alle Kunden auflisten" textAlignment="CENTER" wrapText="true" />
-                                    <Button fx:id="sceneKunden_button_neueKunden" mnemonicParsing="false" onAction="#handleSceneKundenButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Neu Kunden erstellen" textAlignment="CENTER" wrapText="true" />
+                                    <Button fx:id="sceneKunden_button_neueKunden" mnemonicParsing="false" onAction="#handleSceneKundenButtonClicks" prefHeight="100.0" prefWidth="100.0" text="Neuer Kunde erstellen" textAlignment="CENTER" wrapText="true" />
                                  </children>
                               </HBox>
-                              <VBox fx:id="sceneKunden_neueKunden" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" visible="false">
+                              <VBox fx:id="sceneKunden_alleKunden" alignment="CENTER" prefHeight="200.0" prefWidth="100.0" visible="false">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
+                                       <children>
+                                          <Label text="Search:">
+                                             <font>
+                                                <Font size="15.0" />
+                                             </font>
+                                          </Label>
+                                          <TextField fx:id="field_id2" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="Kundenname...." styleClass="textfield" stylesheets="@../css/styles.css">
+                                             <HBox.margin>
+                                                <Insets bottom="4.0" />
+                                             </HBox.margin>
+                                          </TextField>
+                                       </children>
+                                       <VBox.margin>
+                                          <Insets left="20.0" />
+                                       </VBox.margin>
+                                    </HBox>
+                                    <TableView prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                      <columns>
+                                        <TableColumn prefWidth="46.0" text="Nr." />
+                                        <TableColumn prefWidth="118.0" text="Vorname" />
+                                          <TableColumn prefWidth="122.0" text="Nachname" />
+                                          <TableColumn prefWidth="127.0" text="Geburstdatum" />
+                                          <TableColumn prefWidth="144.0" text="Telefonnummer" />
+                                          <TableColumn prefWidth="95.0" text="Adresse" />
+                                      </columns>
+                                       <VBox.margin>
+                                          <Insets left="6.0" right="6.0" top="6.0" />
+                                       </VBox.margin>
+                                    </TableView>
+                                    <HBox alignment="CENTER" prefHeight="62.0" prefWidth="665.0" spacing="10.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" onAction="#handleBackToKundenClick" prefHeight="31.0" prefWidth="78.0" text="Back" />
+                                          <Button disable="true" mnemonicParsing="false" prefHeight="31.0" prefWidth="78.0" text="Löschen" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                              <VBox fx:id="sceneKunden_neueKunden" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0">
                                  <children>
                                     <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="360.0" spacing="15.0">
                                        <children>
@@ -243,7 +283,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneKunden_neueKunden_field_vorname" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" left="55.0" />
                                              </HBox.margin>
@@ -257,7 +297,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id1" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneKunden_neueKunden_field_nachname" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" left="44.0" />
                                              </HBox.margin>
@@ -271,7 +311,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id12" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneKunden_neueKunden_field_ausweisnummer" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" />
                                              </HBox.margin>
@@ -288,7 +328,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id11" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="dd/mm/yyyy" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneKunden_neueKunden_field_geburstdatum" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" promptText="dd/mm/yyyy" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" left="16.0" />
                                              </HBox.margin>
@@ -302,7 +342,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="field_id111" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
+                                          <TextField fx:id="sceneKunden_neueKunden_field_telefonnummer" alignment="CENTER" prefHeight="27.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../css/styles.css" HBox.hgrow="ALWAYS">
                                              <HBox.margin>
                                                 <Insets bottom="4.0" left="2.0" />
                                              </HBox.margin>
@@ -326,11 +366,22 @@
                                           </TextField>
                                        </children>
                                     </HBox>
-                                    <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="81.0" text="Erstellen">
+                                    <HBox alignment="CENTER_RIGHT" prefWidth="360.0" spacing="10.0">
+                                       <children>
+                                          <Button mnemonicParsing="false" onAction="#handleBackToKundenClick" prefHeight="50.0" prefWidth="81.0" text="Back" />
+                                          <Button mnemonicParsing="false" onAction="#handleErstellenNeueKundenClick" prefHeight="50.0" prefWidth="81.0" text="Erstellen">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </Button>
+                                       </children>
                                        <VBox.margin>
-                                          <Insets top="10.0" />
+                                          <Insets />
                                        </VBox.margin>
-                                    </Button>
+                                       <padding>
+                                          <Insets right="25.0" />
+                                       </padding>
+                                    </HBox>
                                  </children>
                               </VBox>
                            </children>
